Archive2/62/1e4606acd92742/output
main.cpp:9:32: error: unknown type name 'C'
    ctor(const x<R, C>& = x<R, C>()) {}
                               ^
main.cpp:9:33: error: expected ')'
    ctor(const x<R, C>& = x<R, C>()) {}
                                ^
main.cpp:9:9: note: to match this '('
    ctor(const x<R, C>& = x<R, C>()) {}
        ^
main.cpp:9:30: error: expected '>'
    ctor(const x<R, C>& = x<R, C>()) {}
                             ^
3 errors generated.
